1. fix scoll bug - reset scroll location on new day trip 2. add edit trip button 3. add margin at botton so the list won't cut off at the end

--- a/apps/client/src/components/OneStopInDayRouteComponent/OneStopInDayRouteComponent.css
+++ b/apps/client/src/components/OneStopInDayRouteComponent/OneStopInDayRouteComponent.css
@@ -1,7 +1,7 @@
 .vertical-line {
     border-left: 1px solid #ffffff;
     height: 30px;
-    margin-left: 2.375%;
+    margin-left: 2.125%;
   }
 
   .icon-details {
